--- a/interface/client/templates/popupWindows/onboardingScreen.html
+++ b/interface/client/templates/popupWindows/onboardingScreen.html
@@ -7,7 +7,7 @@
             <div class="onboarding-section onboarding-start">
                 <p class="description">{{i18n "mist.popupWindows.onboarding.description"}}</p>
                 <p>
-                  <button class="goto-import-account"> {{i18n "mist.popupWindows.onboarding.gotoMainnet"}} </button>
+                  <button class="goto-password"> {{i18n "mist.popupWindows.onboarding.gotoMainnet"}} </button>
                   {{i18n "mist.popupWindows.onboarding.gotoMainnetDescription"}}
                 </p>
                 <p>
@@ -60,8 +60,8 @@
                         <h6 class="address"> {{TemplateVar.get "newAccount"}} </h6>
 
                         {{#unless TemplateVar.get "testnet"}}
-                            <a href="https://shapeshift.io/shifty.html?destination={{newAccountLowerCase}}&amp;output=ETH&amp;apiKey=ef8312d8c9b9dda64fb852e8683eac6c33123f8743ff11383fb3bab29a364c01c27343fced4e628db8d5d66d763565763f8699c0fc903ec23db31cb908a944c8" class="button dapp-block-button dapp-small shapeshift" target="_popup"> {{i18n "mist.popupWindows.onboarding.depositBitcoin"}}  </a>
-                            <h6> {{{i18n "mist.popupWindows.onboarding.viaShapeshift"}}} </h6>
+                            <!-- <a href="https://shapeshift.io/shifty.html?destination={{newAccountLowerCase}}&amp;output=ETH&amp;apiKey=ef8312d8c9b9dda64fb852e8683eac6c33123f8743ff11383fb3bab29a364c01c27343fced4e628db8d5d66d763565763f8699c0fc903ec23db31cb908a944c8" class="button dapp-block-button dapp-small shapeshift" target="_popup"> {{i18n "mist.popupWindows.onboarding.depositBitcoin"}}  </a> -->
+                            <!-- <h6> {{{i18n "mist.popupWindows.onboarding.viaShapeshift"}}} </h6> -->
                         {{/unless}}
                     {{/if}}
                 </div>
@@ -75,7 +75,7 @@
                 <h1> {{i18n "mist.popupWindows.onboarding.learnIt"}} </h1>
                 <div class="col col-6 col-left">
                     {{{i18n "mist.popupWindows.onboarding.tutorial1Description"}}}
-                    <p><a href="https://www.ethereum.org/token" class="button" target="_blank">{{i18n "mist.popupWindows.onboarding.buttons.learnReceipt"}}</a></p>
+                    <!-- <p><a href="https://www.ethereum.org/token" class="button" target="_blank">{{i18n "mist.popupWindows.onboarding.buttons.learnReceipt"}}</a></p> -->
                 </div>
                 <div class="col col-6 tutorial-token"></div>
                 <div class="col col-12 footer-buttons">
@@ -88,7 +88,7 @@
                 <h1> {{i18n "mist.popupWindows.onboarding.learnIt"}} </h1>
                 <div class="col col-6 col-left">
                     {{{i18n "mist.popupWindows.onboarding.tutorial2Description"}}}
-                    <p><a href="https://www.ethereum.org/crowdsale" class="button" target="_blank">{{i18n "mist.popupWindows.onboarding.buttons.learnReceipt"}}</a></p>
+                    <!-- <p><a href="https://www.ethereum.org/crowdsale" class="button" target="_blank">{{i18n "mist.popupWindows.onboarding.buttons.learnReceipt"}}</a></p> -->
                 </div>
                 <div class="col col-6 tutorial-crowdsale"></div>
                 <div class="col col-12 footer-buttons">
@@ -101,7 +101,7 @@
                 <h1> {{i18n "mist.popupWindows.onboarding.learnIt"}} </h1>
                 <div class="col col-6 col-left">
                     {{{i18n "mist.popupWindows.onboarding.tutorial3Description"}}}
-                    <p><a href="https://www.ethereum.org/dao" class="button" target="_blank">{{i18n "mist.popupWindows.onboarding.buttons.learnReceipt"}}</a></p>
+                    <!-- <p><a href="https://www.ethereum.org/dao" class="button" target="_blank">{{i18n "mist.popupWindows.onboarding.buttons.learnReceipt"}}</a></p> -->
                 </div>
                 <div class="col col-6 tutorial-dao"></div>
                 <div class="col col-12 footer-buttons">
