--- a/interface/client/templates/popupWindows/onboardingScreen.html
+++ b/interface/client/templates/popupWindows/onboardingScreen.html
@@ -60,7 +60,7 @@
                         <h6 class="address"> {{TemplateVar.get "newAccount"}} </h6>
 
                         {{#unless TemplateVar.get "testnet"}}
-                            <a href="https://shapeshift.io/shifty.html?destination={{newAccountLowerCase}}&amp;output=ETH&amp;apiKey=22367b4a83df253d2f3c5d7316df3159835c6e3377684b585b56b694ba98aa751b0cb51f8dc263e248aece428adc4d28f686c37288055123bc17ffbfe753ab72" class="button dapp-block-button dapp-small shapeshift" target="_popup"> {{i18n "mist.popupWindows.onboarding.depositBitcoin"}}  </a>
+                            <a href="https://shapeshift.io/shifty.html?destination={{newAccountLowerCase}}&amp;output=ETH&amp;apiKey=<key>" class="button dapp-block-button dapp-small shapeshift" target="_popup"> {{i18n "mist.popupWindows.onboarding.depositBitcoin"}}  </a>
                             <h6> {{{i18n "mist.popupWindows.onboarding.viaShapeshift"}}} </h6>
                         {{/unless}}
                     {{/if}}
@@ -75,7 +75,7 @@
                 <h1> {{i18n "mist.popupWindows.onboarding.learnIt"}} </h1>
                 <div class="col col-6 col-left">
                     {{{i18n "mist.popupWindows.onboarding.tutorial1Description"}}}
-                    <p><a href="https://www.expanse.tech/token" class="button" target="_blank">{{i18n "mist.popupWindows.onboarding.buttons.learnReceipt"}}</a></p>
+                    <p><a href="https://www.WhaleCoin.org/token" class="button" target="_blank">{{i18n "mist.popupWindows.onboarding.buttons.learnReceipt"}}</a></p>
                 </div>
                 <div class="col col-6 tutorial-token"></div>
                 <div class="col col-12 footer-buttons">
@@ -88,7 +88,7 @@
                 <h1> {{i18n "mist.popupWindows.onboarding.learnIt"}} </h1>
                 <div class="col col-6 col-left">
                     {{{i18n "mist.popupWindows.onboarding.tutorial2Description"}}}
-                    <p><a href="https://www.expanse.tech/crowdsale" class="button" target="_blank">{{i18n "mist.popupWindows.onboarding.buttons.learnReceipt"}}</a></p>
+                    <p><a href="https://www.WhaleCoin.org/crowdsale" class="button" target="_blank">{{i18n "mist.popupWindows.onboarding.buttons.learnReceipt"}}</a></p>
                 </div>
                 <div class="col col-6 tutorial-crowdsale"></div>
                 <div class="col col-12 footer-buttons">
@@ -101,7 +101,7 @@
                 <h1> {{i18n "mist.popupWindows.onboarding.learnIt"}} </h1>
                 <div class="col col-6 col-left">
                     {{{i18n "mist.popupWindows.onboarding.tutorial3Description"}}}
-                    <p><a href="https://www.expanse.tech/dao" class="button" target="_blank">{{i18n "mist.popupWindows.onboarding.buttons.learnReceipt"}}</a></p>
+                    <p><a href="https://www.WhaleCoin.org/dao" class="button" target="_blank">{{i18n "mist.popupWindows.onboarding.buttons.learnReceipt"}}</a></p>
                 </div>
                 <div class="col col-6 tutorial-dao"></div>
                 <div class="col col-12 footer-buttons">
